--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@ My CSS Cheat Sheet for learning CSS - Lists and Links
 <html lang="en-US">
   <head>
     <!--General Page Info-->
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Teach Myself CSS - Lists and Links">
+    <meta name="author" content="Mary Ronan as MazontheMoon">
     <title>CSS - Lists and Links</title>
     <!--Stylesheets and favicon-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
