new: Header and nav menu in INDEX
Added header with page title and 2 button menu (mobile screen view only)

--- a/index.html
+++ b/index.html
@@ -21,7 +21,17 @@ My CSS Cheat Sheet for learning CSS - Lists and Links
 <!--=====================
 Finding your way around 
 =========================-->
-    <body>
-
-    </body>
+<body>
+  <header>
+    <h1>Links &amp; Lists</h1>
+  </header>
+  <nav>
+    <ul>
+      <li><a href="#">Lists</a></li>
+      <li><a href="#">Links</a></li>
+    </ul>
+  </nav>
+  <main></main>
+  <footer></footer>
+</body>
 </html>
