add: Sections added to INDEX
Added 2 sections to page for Lists (section1) and Links (section2) and placeholder divs for the 4 subsections with mini menu in section1 (Lists)

--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@ My CSS Cheat Sheet for learning CSS - Lists and Links
 <!--=====================
 Finding your way around 
 =========================-->
+<!--==================================================
+My CSS Cheat Sheet for learning CSS - Lists and Links
+====================================================-->
+
+<!--=====================
+Finding your way around
+=========================
+1. Heading title
+2. Nav menu (only on screen < 1024px)
+3.
+=========================-->
+
 <body>
   <header>
     <h1>Links &amp; Lists</h1>
@@ -31,7 +43,33 @@ Finding your way around
       <li><a href="#">Links</a></li>
     </ul>
   </nav>
-  <main></main>
+  <main>
+    <!--Section 1 - Lists-->
+    <section id="list_sec">
+      <h2>Lists</h2>
+      <div class="subsection">
+        <p>Lists behave like any other text for the most part but there are a few specific CSS properties for &lt;ol&gt; and &lt;ul&gt; list (no other styles applied to &lt;dl&gt; lists)</p>
+        <ul id="list_sec_menu">
+          <li><a href="#">list-style-type</a></li>
+          <li><a href="#">list-style-position</a></li>
+          <li><a href="#">list-style-image</a></li>
+          <li><a href="#">list-style</a></li>
+        </ul>
+      </div>
+      <!--Section 1 - Lists - Subsection 1 List Style Type-->
+      <div class="subsection" id="list_type_subsec"></div>
+      <!--Section 1 - Lists - Subsection 2 List Style Position-->
+      <div class="subsection" id="list_position_subsec"></div>
+      <!--Section 1 - Lists - Subsection 3 List Style Image-->
+      <div class="subsection" id="list_image_subsec"></div>
+      <!--Section 1 - Lists - Subsection 4 List Style-->
+      <div class="subsection" id="list_style_subsec"></div>
+    </section>
+    <!--Section 2 - Lists-->
+    <section id="link_sec">
+      <h2>Links</h2>
+    </section>
+  </main>
   <footer></footer>
 </body>
 </html>
