--- a/index.html
+++ b/index.html
@@ -57,19 +57,50 @@ Finding your way around
         </ul>
       </div>
       <!--Section 1 - Lists - Subsection 1 List Style Type-->
-      <div class="subsection" id="list_type_subsec"></div>
+      <div class="subsection" id="list_type_subsec">
+        <h3>list-style-type</h3>
+        <p>...allows you to set what type of bullet to use for bullet points, or numbers, or letters.</p>
+        <div class="code_box">
+          <code>
+            ol {<br>
+            list-style-type: upper-roman;<br>
+            }
+          </code>
+          <code>
+            ul {<br>
+            list-style-type: square;<br>
+            }
+          </code>
+        </div>
+        <div id="list_style_examples">
+          <p>Examples for &lt;ul&gt;...</p>
+          <ul>
+            <li id="list_circle">circle</li>
+            <li id="list_disc">disc</li>
+            <li id="list_square">square</li>
+          </ul>
+        </div>
+      </div>
       <!--Section 1 - Lists - Subsection 2 List Style Position-->
-      <div class="subsection" id="list_position_subsec"></div>
+      <div class="subsection" id="list_position_subsec">
+        <h3>list-style-position</h3>
+      </div>
       <!--Section 1 - Lists - Subsection 3 List Style Image-->
-      <div class="subsection" id="list_image_subsec"></div>
+      <div class="subsection" id="list_image_subsec">
+        <h3>list-style-image</h3>
+      </div>
       <!--Section 1 - Lists - Subsection 4 List Style-->
-      <div class="subsection" id="list_style_subsec"></div>
+      <div class="subsection" id="list_style_subsec">
+        <h3>list-style</h3>
+      </div>
     </section>
     <!--Section 2 - Lists-->
     <section id="link_sec">
       <h2>Links</h2>
     </section>
   </main>
-  <footer></footer>
+  <footer>
+    <div id="made_by_me"></div>
+  </footer>
 </body>
 </html>
