add: Content for list-style-type ol section on INDEX
Added code box and examples for <ol> in list-style-type subsection under list section

--- a/index.html
+++ b/index.html
@@ -79,6 +79,30 @@ Finding your way around
             <li id="list_disc">disc</li>
             <li id="list_square">square</li>
           </ul>
+          <ol>
+            <li id="list_decimal">decimal</li>
+            <li id="list_decimal_zero">decimal-leading-zero </li>
+            <li id="list_l_alpha">lower-alpha</li>
+            <li id="list_l_greek">lower-greek</li>
+            <li id="list_l_latin">lower-latin</li>
+            <li id="list_l_roman">lower-roman</li>
+            <li id="list_u_alpha">upper-alpha</li>
+            <li id="list_u_greek">upper-greek</li>
+            <li id="list_u_latin">upper-latin</li>
+            <li id="list_u_roman">upper-roman</li>
+          </ol>
+          <p>There are also some uncommonly used types...</p>
+          <ol>
+            <li id="list_armenian">armenian</li>
+            <li id="list_cjk">cjk-ideographic </li>
+            <li id="list_georgian">georgian</li>
+            <li id="list_hebrew">hebrew</li>
+            <li id="list_hiragana">hiragana</li>
+            <li id="list_hiragana-iroha">hiragana-iroha</li>
+            <li id="list_katakana">katakana</li>
+            <li id="list_katakana-iroha">katakana-iroha</li>
+          </ol>
+          <p>And not forgetting about &quot;none&quot; and &quot;inherit&quot;</p>
         </div>
       </div>
       <!--Section 1 - Lists - Subsection 2 List Style Position-->
