add: Content for list-style-position section on INDEX
Added code box and examples for in list-style-position subsection under list section

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Finding your way around
             }
           </code>
         </div>
-        <div id="list_style_examples">
+        <div id="list_type_examples">
           <p>Examples for &lt;ul&gt;...</p>
           <ul>
             <li id="list_circle">circle</li>
@@ -108,17 +108,42 @@ Finding your way around
       <!--Section 1 - Lists - Subsection 2 List Style Position-->
       <div class="subsection" id="list_position_subsec">
         <h3>list-style-position</h3>
+        <p>...sets whether the bullets appear inside the list items or outside them (default) before the start of each item .</p>
+        <div class="code_box">
+          <code>
+            ol { <br>
+            list-style-type: upper-roman;<br>
+            list-style-position: inside;<br>
+            }
+          </code>
+        </div>
+        <div id="list_position_examples">
+          <ol>
+            <li>inside</li>
+            <li id="list_outside">outside</li>
+          </ol>
+        </div>
       </div>
       <!--Section 1 - Lists - Subsection 3 List Style Image-->
       <div class="subsection" id="list_image_subsec">
         <h3>list-style-image</h3>
+        <p>...allows .</p>
+        <div class="code_box">
+          <code></code>
+        </div>
+        <div id="list_image_examples"></div>
       </div>
       <!--Section 1 - Lists - Subsection 4 List Style-->
       <div class="subsection" id="list_style_subsec">
         <h3>list-style</h3>
+        <p>...allows .</p>
+        <div class="code_box">
+          <code></code>
+        </div>
+        <div id="list_image_examples"></div>
       </div>
     </section>
-    <!--Section 2 - Lists-->
+    <!--Section 2 - Links-->
     <section id="link_sec">
       <h2>Links</h2>
     </section>
