new: Add icon for list image examples STAR.SVG
Added svg to use in list-style-image section

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@ Finding your way around
           <code>
             ol {<br>
             list-style-type: upper-roman;<br>
-            }
+            }<br>
           </code>
           <code>
-            ul {<br>
+            <br> ul {<br>
             list-style-type: square;<br>
             }
           </code>
@@ -131,7 +131,7 @@ Finding your way around
         </div>
         <div id="list_position_examples">
           <ol>
-            <li>inside</li>
+            <li id="list_inside">inside</li>
             <li id="list_outside">outside</li>
           </ol>
         </div>
@@ -177,6 +177,8 @@ Finding your way around
             list-style-position: inside;<br>
             }
           </code>
+        </div>
+        <div class="code_box">
           <p>could instead be...</p>
           <code>
             ul {<br>
@@ -202,9 +204,9 @@ Finding your way around
         </ul>
         <p>Tip: to test links use # instead of the url to link back to same page.</p>
         <p>Default link stying:</p>
-        <ul>
+        <ul class="link_styles">
           <li>Links are underlined</li>
-          <li>Unvisited links are blu</li>
+          <li>Unvisited links are blue</li>
           <li>Visited links are purple</li>
           <li>Hovering over a link will make the mouse pointer change to a little hand icon</li>
           <li>Focused links will have an outline around them</li>
