style: Footer content on STYLE
Styling applied to text content and link states on footer

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@ Finding your way around
             <li>My</li>
             <li>Bullets</li>
           </ul>
+          <p>Images used here were taken from<a href="https://fontawesome.com/license">Font Awesome</a></p>
         </div>
       </div>
       <!--Section 1 - Lists - Subsection 4 List Style-->
