update: Added new example for gradient in list-image in INDEX
Added linear gradient as a bullet point in the examples for list-style-image subsection

--- a/index.html
+++ b/index.html
@@ -140,6 +140,13 @@ Finding your way around
       <div class="subsection" id="list_image_subsec">
         <h3>list-style-image</h3>
         <p>...allows you to use a custom image for your bullet..</p>
+        <div class="code_box">
+          <code>
+            ul {<br>
+            list-style-image: url(star.svg);<br>
+            }
+          </code>
+        </div>
         <p>This property is limited in terms of controlling position, size, etc and instead can use the background family of properties:</p>
         <div class="code_box">
           <code>
@@ -158,13 +165,13 @@ Finding your way around
           </code>
         </div>
         <div id="list_image_examples">
+          <p>Gradients can be set too!!</p>
           <ul>
             <li>Look</li>
             <li>At</li>
             <li>My</li>
             <li>Bullets</li>
           </ul>
-          <p>Images used here were taken from<a href="https://fontawesome.com/license">Font Awesome</a></p>
         </div>
       </div>
       <!--Section 1 - Lists - Subsection 4 List Style-->
