new: Set backtotop shortcut on STYLE IND andEX
added backtotop shortcut at end of every section - only for screen < 1024px

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Finding your way around
 
 <body>
   <header>
-    <h1>Links &amp; Lists</h1>
+    <h1 id="top">Links &amp; Lists</h1>
   </header>
   <nav>
     <ul>
@@ -116,6 +116,8 @@ Finding your way around
           </ol>
           <p>And not forgetting about &quot;none&quot; and &quot;inherit&quot;</p>
         </div>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
       <!--Section 1 - Lists - Subsection 2 List Style Position-->
       <div class="subsection" id="list_position_subsec">
@@ -135,6 +137,8 @@ Finding your way around
             <li id="list_outside">outside</li>
           </ol>
         </div>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
       <!--Section 1 - Lists - Subsection 3 List Style Image-->
       <div class="subsection" id="list_image_subsec">
@@ -173,6 +177,8 @@ Finding your way around
             <li>Bullets</li>
           </ul>
         </div>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
       <!--Section 1 - Lists - Subsection 4 List Style-->
       <div class="subsection" id="list_style_subsec">
@@ -197,6 +203,8 @@ Finding your way around
         </div>
         <div id="list_in_out_examples"></div>
       </div>
+      <!--backtotop shortcut-->
+      <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
     </section>
     <!--Section 2 - Links-->
     <section id="link_sec">
@@ -240,8 +248,9 @@ Finding your way around
             padding-right: 19px;<br>
             }
           </code>
-
         </div>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
     </section>
   </main>
