style: Media Query break points on STYLE
Initial styling for >1024 screen views

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@ Finding your way around
           <li><a href="#list_image_subsec">list-style-image</a></li>
           <li><a href="#list_style_subsec">list-style</a></li>
         </ul>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
       <!--Section 1 - Lists - Subsection 1 List Style Type-->
       <div class="subsection" id="list_type_subsec">
@@ -201,10 +203,9 @@ Finding your way around
           </code>
           <p>The values can be listed in any order and you can use one, two or all three (default for values not specified are <span class="look-at-me-text">disc</span>, <span class="look-at-me-text">none</span> and <span class="look-at-me-text">outside</span>).</p>
         </div>
-        <div id="list_in_out_examples"></div>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
-      <!--backtotop shortcut-->
-      <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
     </section>
     <!--Section 2 - Links-->
     <section id="link_sec">
@@ -264,5 +265,5 @@ Finding your way around
       </p>
     </div>
   </footer>
-</body>
+</body
 </html>
