update: Complete table of content on INDEX
Added section and subsection breakdown list

--- a/index.html
+++ b/index.html
@@ -25,14 +25,6 @@ Finding your way around
 My CSS Cheat Sheet for learning CSS - Lists and Links
 ====================================================-->
 
-<!--=====================
-Finding your way around
-=========================
-1. Heading title
-2. Nav menu (only on screen < 1024px)
-3.
-=========================-->
-
 <!--==================================================
 My CSS Cheat Sheet for learning CSS - Lists and Links
 ====================================================-->
@@ -41,8 +33,15 @@ My CSS Cheat Sheet for learning CSS - Lists and Links
 Finding your way around
 =========================
 1. Heading title
-2. Nav menu (only on screen < 1024px)
-3.
+2. Nav menu
+3. Section 1 - Lists
+  3.a Intro
+  3.b Subsection 1 - list-style-type
+  3.c Subsection 2 - list-style-position
+  3.d Subsection 3 - list-style-image
+  3.e Subsection 4 - list-style
+4. Section 2 - Links
+5. Footer
 =========================-->
 
 <body>
@@ -265,5 +264,5 @@ Finding your way around
       </p>
     </div>
   </footer>
-</body
+</body>
 </html>
