test: Validate html and css
Tested links and checked html and css in https://validator.w3.org/ and
https://jigsaw.w3.org/css-validator/

--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@ My CSS Cheat Sheet for learning CSS - Lists and Links
 <!--=====================
 Finding your way around
 =========================
-1. Heading title
-2. Nav menu
-3. Section 1 - Lists
-  3.a Intro
-  3.b Subsection 1 - list-style-type
-  3.c Subsection 2 - list-style-position
-  3.d Subsection 3 - list-style-image
-  3.e Subsection 4 - list-style
-4. Section 2 - Links
-5. Footer
+1. Heading title (49)
+2. Nav menu (51)
+3. Section 1 - Lists (59)
+  3.a Intro (61)
+  3.b Subsection 1 - list-style-type (73)
+  3.c Subsection 2 - list-style-position (124)
+  3.d Subsection 3 - list-style-image (145)
+  3.e Subsection 4 - list-style (184)
+4. Section 2 - Links (210)
+5. Footer (257)
 =========================-->
 
 <body>
