--- a/index.html
+++ b/index.html
@@ -17,17 +17,7 @@ My CSS Cheat Sheet for learning CSS - Lists and Links
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:wght@400;700&display=swap" rel="stylesheet"> 
     </head>
-    
-<!--=====================
-Finding your way around 
-=========================-->
-<!--==================================================
-My CSS Cheat Sheet for learning CSS - Lists and Links
-====================================================-->
-
-<!--==================================================
-My CSS Cheat Sheet for learning CSS - Lists and Links
-====================================================-->
+  
 
 <!--=====================
 Finding your way around
@@ -40,6 +30,7 @@ Finding your way around
   3.c Subsection 2 - list-style-position (124)
   3.d Subsection 3 - list-style-image (145)
   3.e Subsection 4 - list-style (184)
+  3.f Subsection 5 - marker - UPDATE LINE#
 4. Section 2 - Links (210)
 5. Footer (257)
 =========================-->
@@ -202,6 +193,13 @@ Finding your way around
           </code>
           <p>The values can be listed in any order and you can use one, two or all three (default for values not specified are <span class="look-at-me-text">disc</span>, <span class="look-at-me-text">none</span> and <span class="look-at-me-text">outside</span>).</p>
         </div>
+        <!--backtotop shortcut-->
+        <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
+      </div>
+      <!--Section 1 - Lists - Subsection 5 Marker-->
+      <div class="subsection" id="list_style_subsec">
+        <h3>::marker</h3>
+        <p>This pseudo-element is used to style the markers of list items and works on all display:list-item like &lt;li&gt; and &lt;summary&gt; (can also set elements like headers &lt;h3&gt; to display:list-item)</p>
         <!--backtotop shortcut-->
         <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
