update: Add market subsection to INDEX

--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@ Finding your way around
       <div class="subsection" id="list_style_subsec">
         <h3>::marker</h3>
         <p>This pseudo-element is used to style the markers of list items and works on all display:list-item like &lt;li&gt; and &lt;summary&gt; (can also set elements like headers &lt;h3&gt; to display:list-item)</p>
+        <div class="code_box">
+          <code>
+          </code>
         <!--backtotop shortcut-->
         <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
