--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Finding your way around
           <li><a href="#list_position_subsec">list-style-position</a></li>
           <li><a href="#list_image_subsec">list-style-image</a></li>
           <li><a href="#list_style_subsec">list-style</a></li>
+          <li><a href="#list_marker_subsec">marker</a></li>
         </ul>
         <!--backtotop shortcut-->
         <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
@@ -197,12 +198,45 @@ Finding your way around
         <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
       <!--Section 1 - Lists - Subsection 5 Marker-->
-      <div class="subsection" id="list_style_subsec">
+      <div class="subsection" id="list_marker_subsec">
         <h3>::marker</h3>
         <p>This pseudo-element is used to style the markers of list items and works on all display:list-item like &lt;li&gt; and &lt;summary&gt; (can also set elements like headers &lt;h3&gt; to display:list-item)</p>
+        <p>Properties that can be set are:</p>
+        <ul>
+          <li><i>all</i> font properties</li>
+          <li>white-space</li>
+          <li>color</li>
+          <li>content</li>
+          <li><i>all</i> animation properties</li>
+        </ul>
         <div class="code_box">
           <code>
+            ul li::marker {<br>
+              color: red;<br>
+              font-size: 1.5em;<br>
+            }<br>
           </code>
+
+          <code>
+            ol li::marker {<br>
+              content: "🧡 "; <br>
+            }<br>
+          </code>
+
+          <code>
+            h3 {<br>
+              counter-increment: h3;<br>
+              display: list-item;<br>
+            }<br>
+            <br>
+            h3::marker {<br>
+              display: list-item;<br>
+              content: "#" counter(h3) " ";<br>
+              color: fuschia;<br>
+              font-weight: bold;<br>
+            }
+          </code>
+        </div>
         <!--backtotop shortcut-->
         <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
