new: Add link tips to INDEX
Add tips to link subsection for using "rel" attribute in <a>

--- a/index.html
+++ b/index.html
@@ -284,6 +284,17 @@ Finding your way around
             }
           </code>
         </div>
+         <div class="code_box">
+          <p>Some more good practices...using the <i>rel</i> attribute:</p>
+          <code>
+            &lt;!-- for ads or paid content -- &gt; <br>
+            &lt;a rel="sponsored" href="#"&gt;&lt;/a&gt;<br><br>
+            &lt;!--for user generated content -- &gt; <br>
+            &lt;a rel="ugc" href="#"&gt;&lt;/a&gt; <br><br>
+            &lt;!-- for &apos;no follows&apos; -- &gt; <br>
+            &lt;a rel="nofollow" href="#"&gt;&lt;/a&gt; <br>
+          </code>
+         </div>
         <!--backtotop shortcut-->
         <div class="backtotop"><a class="toplink" href="#top"> <i class="far fa-arrow-alt-circle-up"></i></a></div>
       </div>
